# opencubes

./: .gitignore  .gitmodules  LICENSE  README.md  cubes.py
cpp/: .clang-format  .gitignore  CMakeLists.txt  Readme.md  build.sh  cache.hpp  cubes.cpp  program.cpp  results.hpp  rotations.hpp  structs.hpp
cpp/include/: cache.hpp  cube.hpp  cubes.hpp  hashes.hpp  newCache.hpp  results.hpp  rotations.hpp  utils.hpp
cpp/libraries/: mapped_file.cpp  mapped_file.hpp
cpp/src/: cache.cpp  cubes.cpp  newCache.cpp  program.cpp  rotations.cpp
cpp/tests/: .gitignore  CMakeLists.txt  README.md  cubes_tests
cpp/tests/src/: test_cache.cpp  test_rotations.cpp
javascript/: README.md  cubes.js
libraries/: cropping.py  packing.py  parallel.py  renderer.py  resizing.py  rotation.py
python/: README.md  converter.py  cubes.py
python/libraries/: cache.py  packing.py  pcube.py  resizing.py  rotation.py
python/tests/: test_data.npy  test_pcube.py  test_resizing.py  utils.py
rust/: .gitignore  Cargo.toml  README.md  cubes_7.pcube
rust/src/: cli.rs  from_file.rs  hashless.rs  iterator.rs  lib.rs  main.rs  opti_bit_set.rs  pcube_file.rs  pointlist.rs  polycube.rs  polycube_reps.rs  rotation_reduced.rs  rotations.rs  test.rs
rust/src/basic_polycube/: expander.rs  mod.rs  rotations.rs
rust/src/cli/: cli.rs  enumerate.rs
rust/src/iterators/: expander.rs  mod.rs
rust/src/naive_polycube/: expander.rs  mod.rs  rotations.rs
rust/src/pcube/: compression.rs  mod.rs  raw_pcube.rs
rust/src/polycube/: expander.rs  rotations.rs
rust/src/polycubes/: mod.rs
rust/src/polycubes/naive_polycube/: mod.rs  rotations.rs
rust/src/polycubes/pcube/: compression.rs
rust/src/polycubes/point_list/: mod.rs  rotate.rs
rust/src/polycubes/rotation_reduced/: mod.rs  rotate.rs
tests/: __init__.py  test_cache.py  test_cropping.py  test_packing.py  test_parallel.py  test_resizing.py  test_rotation.py
